@startuml impulzus

class User {
    id: string
    fullName: string
    authSchId: string
    email: string
    isAdmin: boolean
    isBoardMember: boolean
    titles: string[]
    picture: string
}
class Post {
    id: string
    title: string
    previewContent: string
    content: string
    categories: stirng[]
    tag: string[]
    createdAt: Date
}

class Comment {
    id: string
    content: string
}

User "1  " -- "0..*" Post: Author
User "1" -- "0..*" Comment
Post "1" -- "0..*" Comment
Newspaper "1" -[hidden]- "0..*" Comment

class Idea {
    id: string
    description: string
}

class Newspaper {
    id: string
    title: string
    contents: string[]
    coverImage: string
    grade: number
    pdf: string
}

@enduml
